--- a/styles/style.css
+++ b/styles/style.css
@@ -136,20 +136,20 @@ margin: 20px 0;
 }
 
 .skills-img {
-    width: 110px;
-    height: 110px;
+    width: 100px;
+    height: 100px;
 }
 
 .skills-title {
     color: #3F3D56;
     font-weight: 600;
+    font-size: 1.3rem;
     margin: 15px 0;
 }
 
 .skills-description {
     color: #3F3D56;
     font-weight: 300;
-    font-size: 1.2rem;
     text-align: center;
     margin: 0 12px;
 }
@@ -174,7 +174,7 @@ margin: 20px 0;
 
 }
 
-label {
+.skill-icon label {
     color: #7d7aa8;
 }
 
@@ -194,7 +194,7 @@ label {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 30px 12px;
+    margin: 35px 12px;
 }
 
 .project-number {
@@ -218,7 +218,6 @@ label {
 .technologies-used {
     color: #fff;
     font-weight: 500;
-    margin-top: 8px;
 }
 
 .technologies {
@@ -231,4 +230,97 @@ label {
     width: 90%;
     height: 175px;
     border-radius: 10px;
+}
+
+.footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: rgba(165, 230, 83, .2);
+}
+
+.contact-form {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 90%;
+}
+
+.lets-connect {
+    color: #3F3D56;
+    margin: 30px 0;
+    font-weight: 400;
+    font-size: 1.5rem;
+    letter-spacing: 3px;
+}
+
+.contact-form label {
+    display: flex;
+    flex-direction: column;
+    color: #3F3D56;
+    width: 100%;
+    letter-spacing: 1px;
+}
+
+input {
+    border: none;
+    border-radius: 5px;
+    height: 40px;
+    margin-bottom: 20px;
+}
+
+textarea {
+    border: none;
+    border-radius: 5px;
+    height: 100px;
+}
+
+.form-btn {
+    border: none;
+    background-color: #3F3D56;
+    color: #A5E653;
+    width: 170px;
+    height: 40px; 
+    text-align: center;
+    border-radius: 5px;
+    font-size: 1.1rem;
+    font-weight: 300;
+    letter-spacing: 1px;
+    margin: 20px 0 0 0;
+}
+
+.form-btn i {
+    color: #A5E653;
+    margin-right: 5px;
+}
+
+.resume {
+    margin: 30px 0;
+    color: #3F3D56;
+    font-size: 1.2rem;
+}
+
+.resume:hover {
+    cursor: pointer;
+    color: #7d7aa8;
+}
+
+.footer-social-nav {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.footer-social-list {
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.footer-social-list li i{
+    margin: 0 0 30px 0;
+    padding: 0;
+    font-size: 2rem;
 }
