--- a/styles/style.css
+++ b/styles/style.css
@@ -71,6 +71,7 @@ nav {
     flex-direction: column;
     align-items: center;
     background-color: #6A888C;
+    margin-top: 60px;
 }
 
 .hero-content {
@@ -123,7 +124,7 @@ h1 {
     justify-content: center;
     background-color: rgba(163, 230, 81,.10);
     width: 90%;
-    height: 450px;
+    height: 425px;
     border-radius: 20px;
 }
 
