--- a/styles/style.css
+++ b/styles/style.css
@@ -211,6 +211,12 @@ margin: 20px 0;
     width: 90%;
 }
 
+.project-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .project-number {
     color: #A5E653;
     font-weight: 300;
@@ -387,7 +393,7 @@ textarea {
     }
 }
 
-@media screen and (min-width: 753px) {
+@media screen and (min-width: 768px) {
     nav {
         width: 65%;
     }
@@ -506,8 +512,7 @@ textarea {
     }
 
     .project-content {
-        display: flex;
-        flex-direction: column;
+        align-items: flex-start;
         width: 50%;
     }
     
