styled hero for screens bigger than 1024px

--- a/styles/style.css
+++ b/styles/style.css
@@ -104,7 +104,7 @@ h1 {
     font-weight: 600;
     font-size: 1.8rem;
     line-height: 1.5em;
-    margin: 0 30px;
+    margin: 0 40px;
 }
 
 .see-work-btn {
@@ -163,7 +163,7 @@ margin: 20px 0;
 
 .skills-description {
     color: #3F3D56;
-    font-weight: 300;
+    font-weight: 200;
     text-align: center;
     margin: 0 12px;
 }
@@ -201,6 +201,7 @@ margin: 20px 0;
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 100%;
 }
 
 .project-wrapper {
@@ -367,6 +368,7 @@ textarea {
     
     h1 {
         font-size: 1.9rem;
+        margin: 0 55px;
     }
     
     .see-work-btn {
@@ -384,12 +386,173 @@ textarea {
     }
 
     h1 {
-        text-align: center;
-        color: #fff;
         font-weight: 600;
         font-size: 2rem;
         line-height: 1.5em;
-        margin: 0 35px;
+        margin: 0 67px;
+    }
+}
+
+@media screen and (min-width: 468px) {
+    h1 {
+        margin: 0 45px;
+    }
+}
+
+@media screen and (min-width: 488px) {
+    h1 {
+        margin: 0 56px;
+    }
+}
+
+@media screen and (min-width: 510px) {
+    h1 {
+        margin: 0 67px;
+    }
+}
+
+@media screen and (min-width: 532px) {
+    h1 {
+        margin: 0 78px;
+    }
+}
+
+@media screen and (min-width: 554px) {
+    h1 {
+        margin: 0 89px;
+    }
+
+    .skills-container {
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-evenly;
+        margin: 50px 0;
+    }
+    
+    .skill-wrapper {
+        width: 30%;
+        height: 350px;
+    }
+
+    .web-dev {
+        margin-top: 0;
+    }
+    
+    .res-des {
+    margin: 0;
+    }
+    
+    .customer-service {
+        margin-bottom: 0;
+    }
+    
+    .skills-img {
+        width: 50px;
+        height: 50px;
+    }
+
+    .skills-title {
+        font-size: 1rem;
+    }
+
+    .skills-description {
+        font-size: .84rem;
+    }
+}
+
+@media screen and (min-width: 576px) {
+    h1 {
+        margin: 0 100px;
+    }
+}
+
+@media screen and (min-width: 598px) {
+    h1 {
+        margin: 0 111px;
+    }
+
+    .skills-description {
+        font-size: .85rem;
+    }
+}
+
+@media screen and (min-width: 620px) {
+    h1 {
+        margin: 0 122px;
+    }
+
+    .skills-description {
+        font-size: .89rem;
+    }
+}
+
+@media screen and (min-width: 642px) {
+    h1 {
+        margin: 0 133px;
+    }
+
+    .skills-description {
+        font-size: .92rem;
+    }
+}
+
+@media screen and (min-width: 664px) {
+    h1 {
+        margin: 0 144px;
+    }
+
+    .skills-title {
+        font-size: 1.1rem;
+        font-weight: 600;
+    }
+
+    .skills-description {
+        font-size: .97rem;
+    }
+}
+
+@media screen and (min-width: 686px) {
+    h1 {
+        margin: 0 155px;
+    }
+
+    .skill-wrapper {
+        padding: 0 9px;
+    }
+
+    .skills-title {
+        font-size: 1.1rem;
+        font-weight: 600;
+    }
+
+    .skills-description {
+        font-size: .95rem;
+    }
+}
+
+@media screen and (min-width: 708px) {
+    h1 {
+        margin: 0 166px;
+    }
+}
+
+@media screen and (min-width: 730px) {
+    h1 {
+        margin: 0 177px;
+    }
+
+    .skill-wrapper {
+        padding: 0 14px;
+    }
+}
+
+@media screen and (min-width: 752px) {
+    h1 {
+        margin: 0 188px;
+    }
+
+    .skill-wrapper {
+        padding: 0 20px;
     }
 }
 
@@ -595,5 +758,28 @@ textarea {
     .footer-social-list li i{
         font-size: 2.3rem;
     }
+}
 
+@media screen and (min-width: 1024px) {
+    h1 {
+        margin-right: 100px;
+        margin-left: 50px;
+    }
+
+    .see-work-btn {
+        margin-left: 50px;
+    }
+
+    .vector-img {
+        margin-right: -200px;
+        margin-top: -30px;
+        height: 350px;
+        width: 350px;
+    }
+
+    .navbar-light .navbar-brand {
+        margin-left: 110px;
+    }
+
+    .social-nav {}
 }
