--- a/styles/style.css
+++ b/styles/style.css
@@ -564,9 +564,15 @@ textarea {
     .navbar-light .navbar-brand {
         margin-left: 60px;
     }
+
+    .navbar-light .navbar-nav .nav-link {
+        color: #fff;
+        font-size: 1rem;
+    }
     
     .hero {
         width: 65%;
+        height: 75vh;
         flex-direction: row-reverse;
         margin: 0;
         margin-top: 60px;
@@ -617,12 +623,6 @@ textarea {
         margin: 0;
         padding: 0;
         width: 100%;
-    }
-
-
-    .navbar-light .navbar-nav .nav-link {
-        color: #fff;
-        font-size: .8rem;
     }
 
     .skills-container {
@@ -762,7 +762,7 @@ textarea {
 
 @media screen and (min-width: 1024px) {
     h1 {
-        margin-right: 100px;
+        font-size: 2.8rem;
         margin-left: 50px;
     }
 
