--- a/styles/style.css
+++ b/styles/style.css
@@ -253,9 +253,13 @@ margin: 20px 0;
     text-align: center;
 }
 
+.project-thumb-container {
+    width: 100%;
+}
+
 .project-thumb {
     width: 100%;
-    height: 175px;
+    height: 200px;
     border-radius: 10px;
 }
 
@@ -280,8 +284,6 @@ iframe {
     font-size: .85rem;
     margin: 0 5px;
 }
-
-
 
 .footer {
     display: flex;
