--- a/main.css
+++ b/main.css
@@ -6,6 +6,10 @@
     box-sizing: border-box;
 }
 
+:root {
+    scroll-behavior: initial;
+}
+
 body {
     font-family: 'Poppins', sans-serif;  
 }
