--- a/main.css
+++ b/main.css
@@ -11,7 +11,7 @@
 }
 
 body {
-    font-family: 'Poppins', sans-serif;  
+    font-family: 'Poppins', sans-serif;
 }
 
 .hidden {
@@ -212,6 +212,7 @@ margin: 20px 0;
     flex-direction: column;
     align-items: center;
     width: 100%;
+    overflow: hidden;
 }
 
 .project-wrapper {
@@ -765,11 +766,13 @@ textarea {
     
     .project-wrapper {
         flex-direction: row;
+        justify-content: center;
     }
 
     .project-content {
         align-items: flex-start;
         width: 50%;
+        padding: 0;
     }
     
     .project-number {
@@ -779,6 +782,7 @@ textarea {
     }
     
     .project-name {
+        text-align: left;
         color: #fff;
         font-weight: 500;
         font-size: 1.7rem;
