--- a/main.css
+++ b/main.css
@@ -770,21 +770,26 @@ textarea {
     .project-wrapper {
         flex-direction: row;
         justify-content: center;
+        align-items: flex-start;
     }
 
     .project-content {
-        align-items: flex-start;
         width: 50%;
+        align-items: center;
+        justify-content: flex-start;
         padding: 0;
     }
     
     .project-number {
+        width: 100%;
+        text-align: left;
         font-weight: 300;
         font-size: .95rem;
         margin: 0;
     }
     
     .project-name {
+        width: 100%;
         text-align: left;
         color: #fff;
         font-weight: 500;
@@ -795,40 +800,45 @@ textarea {
     .project-description {
         text-align: left;
         font-size: .95rem;
+        width: 100%;
     }
 
     .technologies-used {
+        width: 100%;
+        text-align: left;
         font-size: 1.1rem;
     }
     
     .technologies {
+        width: 100%;
         text-align: left;
         font-size: .95rem;
+        margin: 0;
     }
 
     .project-thumb-container {
         width: 50%;
         display: flex;
         flex-direction: column;
-        justify-content: flex-end;
+        justify-content: center;
         align-items: flex-end;
 
     }
     
     .project-thumb {
-        width: 300px;
-        height: 200px;
+        width: 80%;
+        height: 225px;
         border-radius: 10px;
     }
 
     .project-links-container {
-        width: 300px;
+        width: 80%;
         justify-content: center;
     }
 
     iframe {
-        width: 300px;
-        height: 200px;
+        width: 80%;
+        height: 225px;
     }
     
     .img-container {
