took away offcanvas backdrop for screns larger than 768

--- a/main.css
+++ b/main.css
@@ -658,6 +658,10 @@ textarea {
         width: 65%;
     }
 
+    .offcanvas-backdrop {
+        display: none !important;
+    }
+
     .navbar-light .navbar-brand {
         margin-left: 60px;
     }
