--- a/main.css
+++ b/main.css
@@ -65,11 +65,6 @@ i {
     justify-content: center;
 }
 
-.hero-content {
-    display: flex;
-    flex-direction: column;
-}
-
 h1 {
     text-align: center;
     width: 100%;
@@ -437,5 +432,62 @@ textarea {
         color: #fff;
         font-size: 1rem;
         transition: .3s;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .hero {
+        width: 100%;
+        overflow: hidden;
+        height: 250px;
+        align-items: flex-start;
+        justify-content: center;
+    }
+
+    h1 {
+        width: 100%;
+        text-align: left;
+        font-size: 2.3rem;
+        transition: .3s;
+        margin-left: 50px;
+        padding-right: 220px;
+    }
+
+    .hero-btn {
+        margin-left: 50px;
+    }
+    
+    .hero-btn-text {
+        color: #fff;
+        font-size: 1rem;
+        transition: .3s;
+    }
+
+    .skills-container {
+        flex-direction: row;
+        justify-content: space-evenly;
+    }
+    .skill-wrapper {
+        width: 35%;
+    }
+
+    .web-dev {
+        margin: 50px 0 0 0;
+    }
+
+    .res-des {
+        margin: 80px 0 0 0;
+    }
+
+    .res-des {
+        margin: 80px 0 0 0;
+    }
+
+    .customer-service {
+        margin: 80px 0 0 0;
+    }
+
+    .skill-group-1 {
+        margin-top: 50px;
     }
 }
